# libcfp

./: CMakeLists.txt  README.md  changelog
cmake/: libmcfpConfig.cmake.in  mcfpConfig.cmake.in
examples/: example.cpp
include/mcfp/: mcfp.hpp
test/: CMakeLists.txt  unit-test.cpp
